azureps-cmdlets-docs/ServiceManagement/Azure.HDInsight/v0.9.8/Azure.HDInsight.md
---
Module Name: Azure.HDInsight
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: {{Please enter FwLink manually}}
Help Version: {{Please enter version of help manually (X.X.X.X) format}}
Locale: en-US
---

# Azure.HDInsight Module
## Description
This topic displays help topics for the Azure HDInsight Cmdlets. 

## Azure.HDInsight Cmdlets
### [Add-AzureHDInsightConfigValues](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Add-AzureHDInsightConfigValues.md)
Adds a Hadoop configuration value customization or a Hive shared library customization to an HDInsight cluster configuration.


### [Add-AzureHDInsightMetastore](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Add-AzureHDInsightMetastore.md)
Adds a SQL Server database account to an HDInsight cluster configuration.


### [Add-AzureHDInsightScriptAction](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Add-AzureHDInsightScriptAction.md)
Adds an HDInsight script action.


### [Add-AzureHDInsightStorage](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Add-AzureHDInsightStorage.md)
Adds a blob storage account entry to an HDInsight configuration.


### [Get-AzureHDInsightCluster](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Get-AzureHDInsightCluster.md)
Gets an HDInsight cluster.


### [Get-AzureHDInsightJobOutput](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Get-AzureHDInsightJobOutput.md)
Gets the log output for a job.


### [Get-AzureHDInsightJob](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Get-AzureHDInsightJob.md)
Gets HDInsight jobs.


### [Get-AzureHDInsightProperties](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Get-AzureHDInsightProperties.md)
Gets properties specific to an HDInsight service.


### [Grant-AzureHDInsightHttpServicesAccess](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Grant-AzureHDInsightHttpServicesAccess.md)
Grants HTTP access to a cluster.


### [Grant-AzureHdinsightRdpAccess](.\Grant-AzureHdinsightRdpAccess.md)
Grants RDP access to an HDInsight cluster.


### [Invoke-AzureHDInsightHiveJob](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Invoke-AzureHDInsightHiveJob.md)
Submits Hive queries to an HDInsight cluster, shows progress of the query execution, and gets query results in one operation.


### [New-AzureHDInsightClusterConfig](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\New-AzureHDInsightClusterConfig.md)
Creates a non-persisted HDInsight cluster configuration.


### [New-AzureHDInsightCluster](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\New-AzureHDInsightCluster.md)
Creates an HDInsight cluster.


### [New-AzureHDInsightHiveJobDefinition](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\New-AzureHDInsightHiveJobDefinition.md)
Defines a new Hive job for an HDInsight service.


### [New-AzureHDInsightMapReduceJobDefinition](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\New-AzureHDInsightMapReduceJobDefinition.md)
Defines a new MapReduce job.


### [New-AzureHDInsightPigJobDefinition](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\New-AzureHDInsightPigJobDefinition.md)
Defines a new Pig job for an HDInsight service.


### [New-AzureHDInsightSqoopJobDefinition](.\New-AzureHDInsightSqoopJobDefinition.md)
Defines a new Sqoop job.


### [New-AzureHDInsightStreamingMapReduceJobDefinition](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\New-AzureHDInsightStreamingMapReduceJobDefinition.md)
Defines a new streaming MapReduce job.


### [Remove-AzureHDInsightCluster](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Remove-AzureHDInsightCluster.md)
Deletes an HDInsight cluster from a subscription.


### [Revoke-AzureHDInsightHttpServicesAccess](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Revoke-AzureHDInsightHttpServicesAccess.md)
Disables HTTP access to a cluster.


### [Revoke-AzureHdinsightRdpAccess](.\Revoke-AzureHdinsightRdpAccess.md)
Disables RDP access to an HDInsight cluster.


### [Set-AzureHDInsightClusterSize](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Set-AzureHDInsightClusterSize.md)
Sets the number of data nodes for an HDInsight cluster.


### [Set-AzureHDInsightDefaultStorage](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Set-AzureHDInsightDefaultStorage.md)
Sets the default storage account for an HDInsight cluster.


### [Start-AzureHDInsightJob](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Start-AzureHDInsightJob.md)
Starts an HDInsight job.


### [Stop-AzureHDInsightJob](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Stop-AzureHDInsightJob.md)
Stops an HDInsight job.


### [Use-AzureHDInsightCluster](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Use-AzureHDInsightCluster.md)
Selects an HDInsight cluster for the Invoke-AzureHDInsightHiveJob cmdlet to use to submit jobs.


### [Wait-AzureHDInsightJob](..\..\..\..\ResourceManager\AzureRM.HDInsight\v0.9.8\CmdletMDs\Wait-AzureHDInsightJob.md)
Awaits the completion or failure of an HDInsight job and displays the progress of the job.



